End of Section 5
Finished section 5, added some debug shapes macros to use for the future.

--- a/udemy_Course_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/udemy_Course_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -25,6 +25,7 @@ PreviewShaderPlatformName=None
 bPreviewFeatureLevelActive=False
 bPreviewFeatureLevelWasDefault=True
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.EditorStyleSettings]
 bColorVisionDeficiencyCorrection=False
@@ -184,7 +185,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/BluePrints/Items/BP_Item.BP_Item
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1015,7 +1015,7 @@ BP_Item_C.Tick=True
 BP_Item_C.Events=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=460.000 Y=126.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2120,8 +2120,8 @@ MaterialEditor.TimeStamp=2023.11.07-21.18.48
 MaterialEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.10.16-18.49.35
 TextureEditor.LastCompileMethod=Unknown
-udemy_Course_Project.TimeStamp=2023.12.31-08.19.28
-udemy_Course_Project.LastCompileMethod=Unknown
+udemy_Course_Project.TimeStamp=2024.01.01-15.02.56
+udemy_Course_Project.LastCompileMethod=External
 
 [Python]
 LastDirectory=
