End of Section 6
Added static mesh component to Item and learned how to move an actor.

--- a/udemy_Course_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/udemy_Course_Project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -185,6 +185,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/BluePrints/Items/BP_Item.BP_Item
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1013,6 +1014,38 @@ BP_Item_C.Input=True
 BP_Item_C.Actor=True
 BP_Item_C.Tick=True
 BP_Item_C.Events=True
+BP_Item_C.Item=True
+BP_Item_C.Sin Parameters=True
+BP_Item_C.Sin and Cos Parameters=True
+BP_Item_C.StaticMesh=True
+BP_Item_C.Lighting=True
+BP_Item_C.PathTracing=True
+BP_Item_C.Navigation=True
+BP_Item_C.VirtualTexture=True
+BP_Item_C.Tags=True
+BP_Item_C.Cooking=True
+BP_Item_C.ComponentTick=True
+BP_Item_C.ComponentReplication=True
+BP_Item_C.Variable=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BP_Item_C.Materials=True
+StaticMeshComponent.Materials=True
 
 [RootWindow]
 ScreenPosition=X=460.000 Y=126.000
@@ -2120,7 +2153,7 @@ MaterialEditor.TimeStamp=2023.11.07-21.18.48
 MaterialEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.10.16-18.49.35
 TextureEditor.LastCompileMethod=Unknown
-udemy_Course_Project.TimeStamp=2024.01.01-15.02.56
+udemy_Course_Project.TimeStamp=2024.01.08-15.05.04
 udemy_Course_Project.LastCompileMethod=External
 
 [Python]
@@ -2517,11 +2550,13 @@ NavigationData="\"Object\" \"Object.Display.TileGenerationDebug\" \"Object.Gener
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LandscapeStreamingProxy="\"Object\" \"Object.Lightmass.LightmassSettings\" "
 LandscapeProxy="\"Object\" \"Object.Lightmass.LightmassSettings\" "
-PartitionActor="\"Object\" \"Object.Lightmass.LightmassSettings\" "
+PartitionActor="\"Object\" "
 InstancedFoliageActor="\"Object\" "
 ISMPartitionActor="\"Object\" "
 LightmassPrimitiveSettingsObject="\"Object\" "
 Landscape="\"Object\" \"Object.Lightmass.LightmassSettings\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
